worked on CSS for header and figure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><h1>Peter Weigman</h1></header>
+    <header>
+        <section class="name">Peter Weigman's Portfolio</section>
+        <section class="nav-links">
+            <nav>About Me</nav>
+            <nav>Work</nav>
+            <nav>Contact Me</nav>
+            <nav>Resume</nav>
+        </section>
+    </header>
+
+    <figure>
+        <section>
+            Full Stack Developer
+        </section>
+    </figure>
+    <main>
+        
+       <article>
+           <h1>About Me</h1>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, architecto! Voluptatem temporibus libero eveniet inventore, in est consequuntur distinctio nesciunt expedita ullam! Exercitationem repudiandae, quam tempora cupiditate fugit maxime qui.</p>
+       </article>
+       <article>
+        <h1>Work</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, architecto! Voluptatem temporibus libero eveniet inventore, in est consequuntur distinctio nesciunt expedita ullam! Exercitationem repudiandae, quam tempora cupiditate fugit maxime qui.</p>
+    </article>
+
+    <article>
+        <h1>Contact Me</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, architecto! Voluptatem temporibus libero eveniet inventore, in est consequuntur distinctio nesciunt expedita ullam! Exercitationem repudiandae, quam tempora cupiditate fugit maxime qui.</p>
+    </article>
+    </main>
+
+
+    <footer>
+
+    </footer>
 </body>
 </html>
