Finalized CSS styling and added content to about me section

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <header>
         <section class="name">Peter Weigman's Portfolio</section>
         <section class="nav-links">
-            <nav>About Me</nav>
-            <nav>Work</nav>
-            <nav>Contact Me</nav>
-            <nav>Resume</nav>
+            <nav><a href="#about">About Me</a></nav>
+            <nav><a href="#work">Work</a></nav>
+            <nav><a href="#contact">Contact Me</a></nav>
         </section>
     </header>
 
@@ -27,23 +26,46 @@
     <main>
         
        <article>
-           <h1>About Me</h1>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, architecto! Voluptatem temporibus libero eveniet inventore, in est consequuntur distinctio nesciunt expedita ullam! Exercitationem repudiandae, quam tempora cupiditate fugit maxime qui.</p>
+           <section class="left-panel-header" id="about">About Me</section>
+           <section class="right-panel-text"><p>My name is Peter Weigman. I graduated from Clemson University with an Industrial Engineering degree, but have since been working to become a Full Stack Developer. I have experience with HTML, CSS, and Javascript. I am also enrolled in Georgia Tech's Coding Bootcamp, so I will be adding more technologies to the list over the next few months. This portfolio page is intended to showcase some of my work and demostrate my proficiency in different areas of web development. Please feel free to contact me about any of the projects shown below.</p></section>
        </article>
        <article>
-        <h1>Work</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, architecto! Voluptatem temporibus libero eveniet inventore, in est consequuntur distinctio nesciunt expedita ullam! Exercitationem repudiandae, quam tempora cupiditate fugit maxime qui.</p>
+        <section class="left-panel-header" id="work">Work</section>
+        <section class="right-panel-text work-cards">
+            <figure class = "card-main"><section>
+                Application 1
+            </section></figure>
+            <figure class = "card"><section>
+                Application 2
+            </section></figure>
+            <figure class = "card"><section>
+                Application 3
+            </section></figure>
+            <figure class = "card"><section>
+                Application 4
+            </section></figure>
+            <figure class = "card"><section>
+                Application 5
+            </section></figure>
+
+
+
+
+
+
+        </section>
     </article>
 
     <article>
-        <h1>Contact Me</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, architecto! Voluptatem temporibus libero eveniet inventore, in est consequuntur distinctio nesciunt expedita ullam! Exercitationem repudiandae, quam tempora cupiditate fugit maxime qui.</p>
+        <section class="left-panel-header" id="contact">Contact Me</section>
+        <section class="right-panel-text">
+            <ul>
+                <li>(410)-935-1176</li>
+                <li>phweigman@gmail.com</li>
+                <li><a href= "https://github.com/PeterW515" target = "_blank">Github</a></li>
+            </ul>
+        </section>
     </article>
     </main>
-
-
-    <footer>
-
-    </footer>
 </body>
 </html>
