added final updates, including comments and formatting. No major changes made.

--- a/index.html
+++ b/index.html
@@ -9,63 +9,79 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--this is the header section and nav bar-->
     <header>
         <section class="name">Peter Weigman's Portfolio</section>
+        <!--nav bar-->
         <section class="nav-links">
             <nav><a href="#about">About Me</a></nav>
             <nav><a href="#work">Work</a></nav>
             <nav><a href="#contact">Contact Me</a></nav>
         </section>
     </header>
-
+    <!--Cover image-->
     <figure>
         <section>
             Full Stack Developer
         </section>
     </figure>
+    <!--Main content including about, work, and contact info-->
     <main>
-        
-       <article>
-           <section class="left-panel-header" id="about">About Me</section>
-           <section class="right-panel-text"><p>My name is Peter Weigman. I graduated from Clemson University with an Industrial Engineering degree, but have since been working to become a Full Stack Developer. I have experience with HTML, CSS, and Javascript. I am also enrolled in Georgia Tech's Coding Bootcamp, so I will be adding more technologies to the list over the next few months. This portfolio page is intended to showcase some of my work and demostrate my proficiency in different areas of web development. Please feel free to contact me about any of the projects shown below.</p></section>
-       </article>
-       <article>
-        <section class="left-panel-header" id="work">Work</section>
-        <section class="right-panel-text work-cards">
-            <figure class = "card-main"><section>
-                Application 1
-            </section></figure>
-            <figure class = "card"><section>
-                Application 2
-            </section></figure>
-            <figure class = "card"><section>
-                Application 3
-            </section></figure>
-            <figure class = "card"><section>
-                Application 4
-            </section></figure>
-            <figure class = "card"><section>
-                Application 5
-            </section></figure>
-
-
-
-
-
-
-        </section>
-    </article>
-
-    <article>
-        <section class="left-panel-header" id="contact">Contact Me</section>
-        <section class="right-panel-text">
-            <ul>
-                <li>(410)-935-1176</li>
-                <li>phweigman@gmail.com</li>
-                <li><a href= "https://github.com/PeterW515" target = "_blank">Github</a></li>
-            </ul>
-        </section>
-    </article>
+        <!--About section-->
+        <article>
+            <section class="left-panel-header" id="about">About Me</section>
+            <section class="right-panel-text">
+                <p>My name is Peter Weigman. I graduated from Clemson University with an Industrial Engineering degree,
+                    but have since been working to become a Full Stack Developer. I have experience with HTML, CSS, and
+                    Javascript. I am also enrolled in Georgia Tech's Coding Bootcamp, so I will be adding more
+                    technologies to the list over the next few months. This portfolio page is intended to showcase some
+                    of my work and demostrate my proficiency in different areas of web development. Please feel free to
+                    contact me about any of the projects shown below.</p>
+            </section>
+        </article>
+        <!--Work section-->
+        <article>
+            <section class="left-panel-header" id="work">Work</section>
+            <section class="right-panel-text work-cards">
+                <figure class="card-main">
+                    <section>
+                        Application 1
+                    </section>
+                </figure>
+                <figure class="card">
+                    <section>
+                        Application 2
+                    </section>
+                </figure>
+                <figure class="card">
+                    <section>
+                        Application 3
+                    </section>
+                </figure>
+                <figure class="card">
+                    <section>
+                        Application 4
+                    </section>
+                </figure>
+                <figure class="card">
+                    <section>
+                        Application 5
+                    </section>
+                </figure>
+            </section>
+        </article>
+        <!--Contact section-->
+        <article>
+            <section class="left-panel-header" id="contact">Contact Me</section>
+            <section class="right-panel-text">
+                <ul>
+                    <li>(410)-935-1176</li>
+                    <!--Purposely left email link off-->
+                    <li>phweigman@gmail.com</li>
+                    <li><a href="https://github.com/PeterW515" target="_blank">Github</a></li>
+                </ul>
+            </section>
+        </article>
     </main>
 </body>
 </html>
