updated styling and main page

--- a/new_index.html
+++ b/new_index.html
@@ -43,23 +43,77 @@
         </ul>
     </header>
 
-    <main class="container">
-        <div class="parallax-container text-center">
+    <main class="">
+        <div class="section white">
+            <div class="row container">
+                <h2 class="header center-align">Peter Weigman's Portfolio</h2>
+                <h6 class="grey-text text-darken-1 center-align">Welcome to my portfolio. The images below are
+                    screenshots from some of my work. Please scroll through while learning more about me!</h6>
+            </div>
+        </div>
+        <div class="parallax-container">
             <div class="parallax">
                 <img class="responsive-img" src="assets/code_sample.png">
-                <h2 class="header center-align">Peter Weigman's Portfolio</h2>
             </div>
         </div>
         <div class="section white">
+            <div class="row">
+                <div class="col s12 center-align">
+                    <div class="card small blue-grey lighten-1 z-depth-5">
+                        <div class="card-content white-text">
+                            <span class="card-title">My Background</span>
+                            <p>Ater graduating from Clemson University in 2018, I began working for Manhattan
+                                Associates, a supply chain software company. As a consultant and then business
+                                analyst, I worked on the functional side of the software. Around the middle of 2020,
+                                I began to think I wanted to move in to more technical work.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="parallax-container">
+            <div class="parallax"><img class="responsive-img" src="assets/fos_coffee_shop.png"></div>
+        </div>
+        <div class="section white">
+            <div class="row">
+                <div class="col s12 center-align">
+                    <div class="card small blue-grey lighten-1 z-depth-5">
+                        <div class="card-content white-text">
+                            <span class="card-title">The Spark</span>
+                            <p>I thought a good first step (and trial run) into
+                                programming would be to learn Java and take Oracle's certification exam. I passed and became an
+                                Oracle Certified Associate, Java SE 8 Programmer.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="parallax-container">
+            <div class="parallax"><img class="responsive-img" src="assets/tech_blog.png"></div>
+        </div>
+        <div class="section white">
+            <div class="row">
+                <div class="col s12 center-align">
+                    <div class="card small blue-grey lighten-1 z-depth-5">
+                        <div class="card-content white-text">
+                            <span class="card-title">My Development Experience</span>
+                            <p>fter the Java certification, I enrolled in the Georgia
+                                Tech Full Stack Coding Bootcamp in the beginning of 2021. This rigorous program teaches the
+                                fundamentals of HTML, CSS, and Javascript and then quickly accelerates into API development,
+                                Node.js, OOP basics, servers, Express, SQL, MVC, Progressive Web Apps, React, and many other
+                                frameworks, libraries, and packages.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="parallax-container">
+            <div class="parallax"><img class="responsive-img" src="assets/fos_checkout.png"></div>
+        </div>
+        <div class="section white">
             <div class="row container">
-                <h2 class="header">Peter Weigman's Portfolio</h2>
-                <p class="grey-text text-darken-3 lighten-3">My name is Peter Weigman. I graduated from Clemson
-                    University with an Industrial Engineering degree,
-                    but have since been working to become a Full Stack Developer. I have experience with HTML, CSS, and
-                    Javascript. I am also enrolled in Georgia Tech's Coding Bootcamp, so I will be adding more
-                    technologies to the list over the next few months. This portfolio page is intended to showcase some
-                    of my work and demostrate my proficiency in different areas of web development. Please feel free to
-                    contact me about any of the projects shown below.</p>
+                <h2 class="header center-align">Future Goals</h2>
+                <h6 class="grey-text text-darken-1 center-align">I've developed this portfolio with links to some of my projects, as well as my Github account. I hope to use this to showcase my work and launch my career as a full stack developer!</h6>
             </div>
         </div>
         <div class="parallax-container">
