--- a/new_index.html
+++ b/new_index.html
@@ -56,10 +56,10 @@
                 <img class="responsive-img" src="assets/code_sample.png">
             </div>
         </div>
-        <div class="section white">
+        <div class="section white container" id="about">
             <div class="row">
                 <div class="col s12 center-align">
-                    <div class="card small blue-grey lighten-1 z-depth-5">
+                    <div class="card small grey darken-1 z-depth-5">
                         <div class="card-content white-text">
                             <span class="card-title">My Background</span>
                             <p>Ater graduating from Clemson University in 2018, I began working for Manhattan
@@ -72,12 +72,12 @@
             </div>
         </div>
         <div class="parallax-container">
-            <div class="parallax"><img class="responsive-img" src="assets/fos_coffee_shop.png"></div>
+            <div class="parallax container"><img class="responsive-img" src="assets/tech_blog.png"></div>
         </div>
-        <div class="section white">
+        <div class="section white container">
             <div class="row">
                 <div class="col s12 center-align">
-                    <div class="card small blue-grey lighten-1 z-depth-5">
+                    <div class="card small grey darken-1 z-depth-5">
                         <div class="card-content white-text">
                             <span class="card-title">The Spark</span>
                             <p>I thought a good first step (and trial run) into
@@ -89,15 +89,15 @@
             </div>
         </div>
         <div class="parallax-container">
-            <div class="parallax"><img class="responsive-img" src="assets/tech_blog.png"></div>
+            <div class="parallax container"><img class="responsive-img" src="assets/note_taker.png"></div>
         </div>
-        <div class="section white">
+        <div class="section white container">
             <div class="row">
                 <div class="col s12 center-align">
-                    <div class="card small blue-grey lighten-1 z-depth-5">
+                    <div class="card small grey darken-1 z-depth-5">
                         <div class="card-content white-text">
                             <span class="card-title">My Development Experience</span>
-                            <p>fter the Java certification, I enrolled in the Georgia
+                            <p>After the Java certification, I enrolled in the Georgia
                                 Tech Full Stack Coding Bootcamp in the beginning of 2021. This rigorous program teaches the
                                 fundamentals of HTML, CSS, and Javascript and then quickly accelerates into API development,
                                 Node.js, OOP basics, servers, Express, SQL, MVC, Progressive Web Apps, React, and many other
@@ -107,17 +107,23 @@
                 </div>
             </div>
         </div>
-        <div class="parallax-container">
+        <div class="parallax-container container">
             <div class="parallax"><img class="responsive-img" src="assets/fos_checkout.png"></div>
         </div>
-        <div class="section white">
-            <div class="row container">
-                <h2 class="header center-align">Future Goals</h2>
-                <h6 class="grey-text text-darken-1 center-align">I've developed this portfolio with links to some of my projects, as well as my Github account. I hope to use this to showcase my work and launch my career as a full stack developer!</h6>
-            </div>
-        </div>
-        <div class="parallax-container">
-            <div class="parallax"><img class="responsive-img" src="assets/fos_checkout.png"></div>
+                <div class="section white container">
+                    <div class="row">
+                        <div class="col s12 center-align">
+                            <div class="card small grey darken-1 z-depth-5">
+                                <div class="card-content white-text">
+                                    <span class="card-title">Future Goals</span>
+                                    <p>I've developed this portfolio with links to some of my projects, as well as my Github account. I hope to use this to showcase my work and launch my career as a full stack developer!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        <div class="parallax-container container">
+            <div class="parallax"><img class="responsive-img" src="assets/weather_dashboard.png"></div>
         </div>
     </main>
 
